# ml-avalon

./: README.md  makefile
avalon/: Chart.yaml  values.yaml
avalon/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
avalon/templates/tests/: test-connection.yaml
docs/: cassandra.md  kafka.md  kubeflow.md  microk8s_setup.md  spark.md
kafka2cassandra/: README.md  main.py  pyproject.toml
kubeflow/: kfctl_k8s_istio.v1.0.0.yaml  kfctl_k8s_istio.v1.1.0.yaml
