[tool.poetry]
name = "kafka2cassandra"
version = "0.1.0"
description = ""
authors = ["wuhaohsiang <wuhaohsiang1992@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
